[tool.poetry]
name = "xnodes"
version = "0.1.0"
description = "XNodes is an application framework which provides an event mechanism for unrelated nodes by utilizing a global event bus"
authors = ["newmra"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
